Remove Historic access service (#976)
* Remove historic access service and docs
* Regenerate swagger and REST API documentation.
