# api/swagger/publisher.json
@@ -55,6 +55,13 @@
             }
           }
         },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ],
         "x-ms-pageable": {
           "nextLinkName": "continuationToken"
         }
@@ -103,7 +110,14 @@
               "$ref": "#/definitions/JobInfoListApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/jobs/{id}": {
@@ -136,7 +150,14 @@
               "$ref": "#/definitions/JobInfoApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -158,7 +179,14 @@
           "200": {
             "description": "Success"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/jobs/{id}/cancel": {
@@ -182,7 +210,14 @@
           "200": {
             "description": "Success"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/jobs/{id}/restart": {
@@ -206,7 +241,14 @@
           "200": {
             "description": "Success"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/publish/{endpointId}/start": {
@@ -255,7 +297,14 @@
               "$ref": "#/definitions/PublishStartResponseApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/publish/{endpointId}/bulk": {
@@ -304,7 +353,14 @@
               "$ref": "#/definitions/PublishBulkResponseApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/publish/{endpointId}/stop": {
@@ -353,7 +409,14 @@
               "$ref": "#/definitions/PublishStopResponseApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     },
     "/publisher/v2/publish/{endpointId}": {
@@ -402,7 +465,14 @@
               "$ref": "#/definitions/PublishedItemListResponseApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       },
       "get": {
         "tags": [
@@ -441,6 +511,13 @@
             }
           }
         },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ],
         "x-ms-pageable": {
           "nextLinkName": "continuationToken"
         }
@@ -483,6 +560,13 @@
             }
           }
         },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ],
         "x-ms-pageable": {
           "nextLinkName": "continuationToken"
         }
@@ -518,7 +602,14 @@
               "$ref": "#/definitions/WorkerInfoApiModel"
             }
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -540,7 +631,14 @@
           "200": {
             "description": "Success"
           }
-        }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication"
+            ]
+          }
+        ]
       }
     }
   },
@@ -1037,11 +1135,14 @@
     }
   },
   "securityDefinitions": {
-    "bearer": {
-      "type": "apiKey",
-      "name": "Authorization",
-      "in": "header",
-      "description": "Authorization token in the form of 'bearer <token>'"
+    "oauth2": {
+      "type": "oauth2",
+      "flow": "implicit",
+      "authorizationUrl": "https://login.microsoftonline.com/6e660ce4-d51a-4585-80c6-58035e212354/oauth2/authorize",
+      "scopes": {
+        "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication": "Access http://schemas.xmlsoap.org/ws/2005/05/identity/claims/authentication operations"
+      },
+      "description": "Implicit oauth2 token flow."
     }
   },
   "tags": [
